# Casa

./: README.md  pyproject.toml
config/: home.yaml  lights.yaml
demo_notebooks/: langgraph_demo.ipynb  ocr.ipynb  ollama_demo.ipynb  sound_creation.py  whisper_demo.ipynb
src/: control_tools.py  demo.ipynb  demo.py  hue_utils.py  main.py  models.py  prompts.py  tools.py  utils.py
src/utils/: hue_api_utils.py  utils.py  yaml_utils.py
