[project]
name = "casa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "certifi>=2025.11.12",
    "duckduckgo-search>=8.1.1",
    "geopy>=2.4.1",
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "openai-whisper>=20250625",
    "paddleocr>=3.3.2",
    "paho-mqtt>=2.1.0",
    "phue>=1.1",
    "pvporcupine>=4.0.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "smolagents>=1.24.0",
    "sounddevice>=0.5.3",
    "transformers>=4.57.6",
    "webrtcvad>=2.0.10",
]
